Use dependency injection